@@ -6,7 +6,8 @@ http://semantic-mediawiki.org/wiki/Semantic_Result_Formats
 
 * Fixed rendering bug in the tagcloud format occuring for inline queries.
 * Fixed jqPlotBar and jqPlotPie rendering on Special:Ask and other special pages. 
-Cleaned up the jqPlotBar format somewhat.
+* Cleaned up the jqPlotBar format somewhat.
+* Dropped compatibility with SMW < 1.6 for the TagCloud format.
 
 == SRF 1.6 ==
 
